[project]
name = "adr_toolbox"
version = "0.0.0"
description = "Toolbox for analysis and design of Active Debris Removal systems, missions, and SoS architectures"
authors = [
    {name = "Joshua David Fitch", email = "jfitch007@outlook.com"},
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]

build-backend = "setuptools.build_meta"
