[metadata]
name = adr_toolbox
version = 0.0.1
author = Joshua Fitch
author_email = jfitch007@outlook.com
description = Toolbox of capabilies for design and analysis of Active Debris Removal missions, systems, and SoS architectures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.itap.purdue.edu/SystemofSystemsLaboratory/adr_toolbox
project_urls =
Bug Tracker = https://github.itap.purdue.edu/SystemofSystemsLaboratory/adr_toolbox/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir =
= src
packages = find:
python_requires = >=3.6
install_requires =
   numpy
